# computer-vision-hugging-face

./: .gitignore  .repomixignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
infra/: grafana.yaml  prometheus.yaml
outputs/descriptions/: 23027.json  410808.json  456046.json  5823589-2920x1640-desktop-hd-boy-programmer-wallpaper-image.json  a-girl-stands-below-cherry-blossoms-in-a-beautiful-landscape-photo.json  anime-eyes-illustration.json  frieren-winter.json  images.json
scripts/: build_context.sh  download_vlm.sh  process_all_images.sh  start_api.sh  stop_api.sh
src/: main.py
src/config/: config.py
src/inference/: inference.py
src/observability/: metrics.py
src/routers/: health.py  images.py
src/utils/: image_utils.py  logging_utils.py  model_utils.py
