[project]
name = "hugging-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "fastapi>=0.136.1",
    "llama-cpp-python>=0.3.22",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "scalar-fastapi>=1.8.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
